tests/cases/should_fail/literals/non_hex_ascii_escape_code.stderr
error: encountered unexpected character `h`. ASCII escape code must only contain hex digits
 --> $DIR/non_hex_ascii_escape_code.hash:1:8
1 |   k := '\xhh';
  |          ^ here
